--- a/internal/core/Cargo.toml
+++ b/internal/core/Cargo.toml
@@ -48,7 +48,7 @@ unsafe-single-threaded = []
 
 unicode = ["unicode-script", "unicode-linebreak"]
 
-software-renderer-systemfonts = ["shared-fontique", "rustybuzz", "fontdue", "software-renderer", "shared-parley"]
+software-renderer-systemfonts = ["shared-fontique", "fontdue", "software-renderer", "shared-parley"]
 software-renderer = ["bytemuck"]
 
 image-decoders = ["dep:image", "dep:clru"]
@@ -118,7 +118,6 @@ bitflags = { version = "2.4.2" }
 
 chrono = { version = "0.4", default-features = false, features = ["alloc"] }
 
-rustybuzz = { workspace = true, optional = true }
 fontdue = { workspace = true, optional = true }
 
 wgpu-26 = { workspace = true, optional = true }
@@ -138,7 +137,7 @@ web-sys = { workspace = true, features = ["HtmlImageElement", "Navigator"] }
 [dev-dependencies]
 slint = { path = "../../api/rs/slint", default-features = false, features = ["std", "compat-1-2"] }
 i-slint-backend-testing = { path = "../backends/testing" }
-rustybuzz = { workspace = true }
+rustybuzz = { version = "0.20.0" }
 ttf-parser = { workspace = true }
 serde_json = { workspace = true }
 tiny-skia = "0.11.0"
